--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
     "json-rpc2": "^1.0.2",
     "vscode-debugadapter": "^1.11.0",
     "vscode-debugprotocol": "^1.11.0",
-    "vscode-extension-telemetry": "0.0.5"
+    "vscode-extension-telemetry": "0.0.5",
+    "vscode-languageclient": "^2.5.0"
   },
   "devDependencies": {
     "@types/fs-extra": "0.0.35",
@@ -388,6 +389,11 @@
             "godoc",
             "gogetdoc"
           ]
+        },
+        "go.useLanguageServer": {
+          "type": "boolean",
+          "default": false,
+          "description": "Use language server from sourcegraph for Hover, Definition, Find All References, File Outline and Workspace Symbol features"
         }
       }
     }
